@@ -49,7 +49,7 @@
             "description": "A mark captures the timing of a significant event during the lifetime of a transaction. Marks are organized into groups and can be set by the user or the agent.",
             "regexProperties": true,
             "patternProperties": {
-                "^[^.*\"]*$": { 
+                "^[^.*\"]*$": {
                     "$ref": "mark.json",
                     "maxLength": 1024
                 }
@@ -67,7 +67,7 @@
                     "type": ["object", "null"],
                     "properties": {
                         "total": {
-                            "type": ["number","null"],
+                            "type": ["integer","null"],
                             "description": "Number of spans that have been dropped by the agent recording the transaction."
                         }
                     }
